[package]
name = "quasi_codegen"
version = "0.7.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[features]
default = ["with-syntex"]
with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]

[dependencies]
aster = { git = "https://github.com/benashford/aster", branch = "experimental", default-features = false }
syntex = { git = "https://github.com/benashford/syntex", branch = "experimental", optional = true }
syntex_syntax = { git = "https://github.com/benashford/syntex", branch = "experimental", optional = true }
