[package]
name = "quasi_tests"
version = "0.5.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
build = "build.rs"

[build-dependencies]
quasi_codegen = { path = "../quasi_codegen" }
syntex = { git = "https://github.com/benashford/syntex" }

[dev-dependencies]
aster = { git = "https://github.com/benashford/aster", features = ["with-syntex"] }
quasi = { path = "../quasi", features = ["with-syntex"] }
syntex = { git = "https://github.com/benashford/syntex" }
syntex_syntax = { git = "https://github.com/benashford/syntex" }
